--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <input type="checkbox" class="checkbox"/><span>Remember me</span>
                     </div>
                     <div class="input-second">
-                        <a href="#" class="forget"><em>forget password</em></a>
+                        <a href="#" class="forget"><em>forgot password</em></a>
                     </div>
               </div>
               
